first commit of markup template and supporting files

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,10 @@
+
+
+[Tt]humbs.db
+
+
+# .NET specific stuff below...
+
 # Build Folders (you can keep bin if you'd like, to store dlls and pdbs)
 [Bb]in/
 [Oo]bj/
