--- a/.editorconfig
+++ b/.editorconfig
@@ -4,5 +4,5 @@ root = true  ; top-most EditorConfig file
 
 ; Unix-style newlines with a newline ending every file
 [*]
-end_of_line = crlf
+end_of_line = lf
 indent_style = tab
