--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "matchdep": "~0.3.0",
     "grunt-contrib-compass": "~0.5.0",
     "grunt-contrib-jshint": "~0.6.4",
-    "grunt-contrib-watch": "~0.3.1"
+    "grunt-contrib-watch": "~0.3.1",
+    "grunt-contrib-uglify": "~0.2.0"
   }
 }
