--- a/.gitignore
+++ b/.gitignore
@@ -113,6 +113,9 @@ Generated_Code #added for RIA/Silverlight projects
 _UpgradeReport_Files/
 Backup*/
 UpgradeLog*.XML
+
+# Front-end tools
 .sass-cache/
 compass_app_log.txt
 css/
+node_modules/
