--- a/.editorconfig
+++ b/.editorconfig
@@ -5,3 +5,20 @@ root = true  ; top-most EditorConfig file
 ; Unix-style newlines with a newline ending every file
 [*]
 indent_style = tab
+
+
+[*.cs]
+indent_style = space
+indent_size = 4
+
+[*.js]
+indent_style = space
+indent_size = 2
+
+[*.json]
+indent_style = space
+indent_size = 2
+
+[*.cshtml]
+indent_style = space
+indent_size = 4
